[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["urozhha <urozhha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
